--- a/articulo.html
+++ b/articulo.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Karen es la mejor</h1>
-        <p>Holaaa no alcance a copiar todo</p>
+        <div id="container">
+            <div id="post">
+                <h1>Karen es la mejor</h1>
+                <p>Holaaa no alcance a copiar todo</p>
+            </div>
+        </div>
     </body>
 </html>
