--- a/articulo.html
+++ b/articulo.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id=cabecera>
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Karen es la mejor</h1>
                 <p>Holaaa no alcance a copiar todo</p>
