--- a/articulo.html
+++ b/articulo.html
@@ -7,7 +7,8 @@
         <div id="container">
             <div id="post">
                 <h1>Karen es la mejor</h1>
-                <p>Holaaa no alcance a copiar todo</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In laborum numquam repellendus facere corporis quidem iusto cumque, libero harum architecto aliquid hic eveniet doloremque ipsa aperiam pariatur fugit facilis odit.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In laborum numquam repellendus facere corporis quidem iusto cumque, libero harum architecto aliquid hic eveniet doloremque ipsa aperiam pariatur fugit facilis odit.</p>
             </div>
         </div>
     </body>
