Modifique la cabecera y el color del texto

--- a/articulo.html
+++ b/articulo.html
@@ -6,7 +6,10 @@
     <body>
         <div id="container">
             <div id=cabecera>
-                Cabecera
+                Hyperblog
+                <span id="tigline">
+                    Tu blog de cabecera
+                </span>
             </div>
             <div id="post">
                 <h1>Karen es la mejor</h1>
