agrege subscripcion cambie el color y el texto

--- a/articulo.html
+++ b/articulo.html
@@ -6,12 +6,17 @@
     <body>
         <div id="container">
             <div id=cabecera>
-                Cabecera
+                Hyperblog
+                <span id="tigline">
+                    Tu blog de maestro
+                </span>
             </div>
             <div id="post">
                 <h1>Karen es la mejor</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In laborum numquam repellendus facere corporis quidem iusto cumque, libero harum architecto aliquid hic eveniet doloremque ipsa aperiam pariatur fugit facilis odit.</p>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In laborum numquam repellendus facere corporis quidem iusto cumque, libero harum architecto aliquid hic eveniet doloremque ipsa aperiam pariatur fugit facilis odit.</p>
+                <p>Subscribete y dale like</p>
+
             </div>
         </div>
     </body>
